[tool.poetry]
name = "face-agent"
version = "0.1.0"
description = "Vision-enabled Face Agent using LangGraph and GPT-4o"
authors = ["Kai Niskanen"]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.60"
langchain-openai = "^0.2.14"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
pydantic = "^2.10.4"
python-dotenv = "^1.0.1"
langgraph-checkpoint-postgres = "^2.0.9"
psycopg-pool = "^3.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
